2004-01-06 Vangelis Rokas <vrokas@otenet.gr>

	PIC16 port related changes:
	* device.c: removed pic16_finalMapping and pic16_finalMappingSize,
	added variable stackPos,

	* gen.c: genCall, assignResultValue: added support for
	pushing/retrieving function parameters to/from stack,
	genFunction,genEndFunction: setup stack frame for the
	generated function,
	genAddrOf: will be changed according to bug 863624
	
	* added files genutils.c and genutils.h which contain gen*
	debugged and optimised functions extracted from gen.c
	
	* glue.c: added variable 'externs' which holds extern symbols,
	pic16emitRegularMap: is modified to properly handle relocatable
	 symbols under the new scheme,
	pic16createInterruptVect: is modified
	pic16printPublics: is modified to emit 'global'	assembler directives,
	added pic16_printExterns to print extern symbols,
	pic16glue: initializes stack/frame pointer in the beginning of
	the assembly output. Temporary hack, will be corrected later,
	because gplink yet does not support stack and SDCC does not
	yet support a type of crt0.o object to create the final binary.
	
	* Removed many lines that contain 8051 legacy code.
	* The code is finally placed under a 'code' directive.
	* Added port specific options.
	
	* _process_pragma: simplified since now we do not need *special*
	include file to define SFR registers. But a separate header
	will be needed. This will be developed later.
	* _pic16_parseOptions: added, parses port specific options:
	--pgen-banksel,	--obanksel=, --pomit-config-words, --pomit-ivt,
	--pleave-reset-vector, --penable-stack, --pstack-model, --debug-xtra
	--preplace-udata-with=
	
	* _pic16_setDefaultOptions: modified to initialize section names,
	but hack is temporarly out of order since it needs improvement.
	* _pic16_genAssemblerPreamble: configuration words are emitted by
	their address instead of their name. This part is incomplete and
	supports only the 18Fxx2 devices. Other devices will emit an error